# poc_edinet

./: .gitignore  Cargo.toml  README.md  sample.env
src/: main.rs
src/verify/: mod.rs  verify_1.rs
