[package]
name = "poc_edinet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.1", features = ["full"] }
anyhow = { version = "1", features = ["backtrace"] }
dotenv = "0.15.0"
mylogger = { git = "https://github.com/ryo2357/rs-mylogger" }
log = "0.4.20"
reqwest = { version = "0.12.2", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
